[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/Spike2.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/Border.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/52x52 SpellSlotBorder.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/White_circle.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI/New Globes/itsmars_orb_back2.png" type="Texture" id=6]
[ext_resource path="res://Assets/GUI/New Globes/itsmars_orb_border.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI/New Globes/itsmars_orb_highlight.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/39.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/Spikes1.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/New Globes/itsmars_orb_shadow.png" type="Texture" id=11]
[ext_resource path="res://Fonts/Ubuntu-Bold.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_size = 1
use_filter = true
font_data = ExtResource( 12 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Player_Health_Globe" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -250.0
margin_right = 250.0

[node name="GlobeFull" type="TextureRect" parent="Player_Health_Globe"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -250.0
margin_bottom = 250.0
texture = ExtResource( 6 )
expand = true

[node name="TextureProgress" type="TextureProgress" parent="Player_Health_Globe/GlobeFull"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -120.0
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 240, 240 )
value = 70.0
texture_progress = ExtResource( 5 )
fill_mode = 3
tint_progress = Color( 1, 0, 0, 0.588235 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="Player_Health_Globe/GlobeFull/TextureProgress"]

[node name="GlobeCover" type="TextureRect" parent="Player_Health_Globe"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -250.0
margin_bottom = 250.0
texture = ExtResource( 7 )
expand = true

[node name="GlobeTransparant" type="TextureRect" parent="Player_Health_Globe"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -250.0
margin_bottom = 250.0
texture = ExtResource( 8 )
expand = true

[node name="GlobeShadow" type="TextureRect" parent="Player_Health_Globe"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -250.0
margin_bottom = 250.0
texture = ExtResource( 11 )
expand = true

[node name="DecoCorner" type="TextureRect" parent="Player_Health_Globe"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -180.0
margin_right = 180.0
texture = ExtResource( 3 )
expand = true

[node name="Health_Label" type="TextureRect" parent="Player_Health_Globe"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 100.0
texture = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="Player_Health_Globe/Health_Label"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -16.0
margin_right = 20.0
margin_bottom = 7.0
custom_colors/font_color = Color( 1, 0.0117647, 0.0117647, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1

[node name="Player_Mana_Globe" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -250.0

[node name="GlobeFull" type="TextureRect" parent="Player_Mana_Globe"]
margin_right = 250.0
margin_bottom = 250.0
texture = ExtResource( 6 )
expand = true
flip_h = true

[node name="TextureProgress" type="TextureProgress" parent="Player_Mana_Globe/GlobeFull"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -120.0
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 240, 240 )
value = 70.0
texture_progress = ExtResource( 5 )
fill_mode = 3
tint_progress = Color( 0.00784314, 0, 1, 0.588235 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="Player_Mana_Globe/GlobeFull/TextureProgress"]

[node name="GlobeCover" type="TextureRect" parent="Player_Mana_Globe"]
margin_right = 250.0
margin_bottom = 250.0
texture = ExtResource( 7 )
expand = true

[node name="GlobeTransparant" type="TextureRect" parent="Player_Mana_Globe"]
margin_right = 250.0
margin_bottom = 250.0
texture = ExtResource( 8 )
expand = true
flip_h = true

[node name="GlobeShadow" type="TextureRect" parent="Player_Mana_Globe"]
margin_right = 250.0
margin_bottom = 250.0
texture = ExtResource( 11 )
expand = true
flip_h = true

[node name="DecoCorner" type="TextureRect" parent="Player_Mana_Globe"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -180.0
texture = ExtResource( 3 )
expand = true
flip_h = true

[node name="Mana_Label" type="TextureRect" parent="Player_Mana_Globe"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
texture = ExtResource( 9 )
expand = true
flip_h = true

[node name="Label" type="Label" parent="Player_Mana_Globe/Mana_Label"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -16.0
margin_right = 20.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.180392, 0.0117647, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.984314, 0.972549, 0.972549, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1

[node name="SkillBar" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -300.0
margin_right = 250.0

[node name="Skill_UI_One" type="TextureRect" parent="SkillBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -260.0
margin_right = 150.0
texture = ExtResource( 10 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="SkillBar/Skill_UI_One"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 112.0
margin_top = 60.0
margin_right = -112.0
margin_bottom = -120.0

[node name="TextureRect" type="TextureRect" parent="SkillBar/Skill_UI_One/HBoxContainer"]
margin_right = 77.0
margin_bottom = 80.0
rect_min_size = Vector2( 77, 80 )
texture = ExtResource( 4 )
expand = true

[node name="Skill_UI_Two" type="TextureRect" parent="SkillBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -180.0
margin_right = 250.0
texture = ExtResource( 2 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="SkillBar/Skill_UI_Two"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 112.0
margin_top = 80.0
margin_right = -100.0
margin_bottom = -41.0

[node name="Shortcut1" type="TextureRect" parent="SkillBar/Skill_UI_Two/HBoxContainer"]
margin_right = 66.0
margin_bottom = 62.0
rect_min_size = Vector2( 66, 62 )
size_flags_vertical = 5
texture = ExtResource( 4 )
expand = true

[node name="TextureButton" type="TextureButton" parent="SkillBar/Skill_UI_Two/HBoxContainer/Shortcut1" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Shortcut2" type="TextureRect" parent="SkillBar/Skill_UI_Two/HBoxContainer"]
margin_left = 70.0
margin_right = 136.0
margin_bottom = 62.0
rect_min_size = Vector2( 66, 62 )
size_flags_vertical = 5
texture = ExtResource( 4 )
expand = true

[node name="TextureButton" type="TextureButton" parent="SkillBar/Skill_UI_Two/HBoxContainer/Shortcut2" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Shortcut3" type="TextureRect" parent="SkillBar/Skill_UI_Two/HBoxContainer"]
margin_left = 140.0
margin_right = 206.0
margin_bottom = 62.0
rect_min_size = Vector2( 66, 62 )
size_flags_vertical = 5
texture = ExtResource( 4 )
expand = true

[node name="TextureButton" type="TextureButton" parent="SkillBar/Skill_UI_Two/HBoxContainer/Shortcut3" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Shortcut4" type="TextureRect" parent="SkillBar/Skill_UI_Two/HBoxContainer"]
margin_left = 210.0
margin_right = 276.0
margin_bottom = 62.0
rect_min_size = Vector2( 66, 62 )
size_flags_vertical = 5
texture = ExtResource( 4 )
expand = true

[node name="TextureButton" type="TextureButton" parent="SkillBar/Skill_UI_Two/HBoxContainer/Shortcut4" groups=["Shortcuts"]]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
